# Image-processor

./: CMakeLists.txt  image.cpp  image.h  image_processor.cpp  pixel.cpp  pixel.h  test.cpp
filters/: crop_filter.cpp  crop_filter.h  edge_detection_filter.cpp  edge_detection_filter.h  filter.h  gaussian_blur_filter.cpp  gaussian_blur_filter.h  grayscale_filter.cpp  grayscale_filter.h  hypno_filter.cpp  hypno_filter.h  negative_filter.cpp  negative_filter.h  sharpening_filter.cpp  sharpening_filter.h
